--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,23 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark px-3">
   <a class="navbar-brand m-1" href="#">MyLottery</a>
+
+  <div class="btn-group dropstart">
+    <button
+      type="button"
+      class="btn btn-outline-secondary dropdown-toggle"
+      data-bs-toggle="dropdown"
+      aria-expanded="false"
+    >
+      Ayuda
+    </button>
+    <ul class="p-3 dropdown-menu">
+      <li>
+        <p class="text-center">
+          Para realizar un sorteo, ingresa los participantes
+          <b>uno debajo del otro </b>, elige la cantidad de ganadores, y apreta
+          en "Sortear!"
+        </p>
+      </li>
+    </ul>
+  </div>
 </nav>
